k8s/apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.walnuts.ml/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.walnuts.ml/oauth2/start?rd=/redirect/$http_host$escaped_request_uri"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "longhorn.walnuts.ml"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
