k8s/apps/longhorn/network-policy-manager-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager-metrics-ingress
  namespace: longhorn-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
        - port: 9500
          protocol: TCP
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
