k8s/apps/longhorn/network-policy-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      app: longhorn-ui
  policyTypes:
    - Ingress
